--- a/ChartControls/Pages/_ViewImports.cshtml
+++ b/ChartControls/Pages/_ViewImports.cshtml
@@ -1,4 +1,4 @@
 ﻿@using ChartControls
 @namespace ChartControls.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@addTagHelper *, Syncfusion.EJ2”
+@addTagHelper *, Syncfusion.EJ2
