--- a/ChartControls/Pages/Index.cshtml
+++ b/ChartControls/Pages/Index.cshtml
@@ -2,6 +2,22 @@
 @model IndexModel
 @{
     ViewData["Title"] = "Home page";
+    List<LayoutData> SalesData = new List<LayoutData>()
+    {
+        new LayoutData{ Period = "Jan", OnlinePercentage = 36, RetailPercentage = 64 },
+        new LayoutData{ Period = "Feb", OnlinePercentage = 62, RetailPercentage = 53 },
+        new LayoutData{ Period = "Mar", OnlinePercentage = 81, RetailPercentage = 49 },
+        new LayoutData{ Period = "Apr", OnlinePercentage = 59, RetailPercentage = 53 },
+        new LayoutData{ Period = "May", OnlinePercentage = 89, RetailPercentage = 42 },
+        new LayoutData{ Period = "Jun", OnlinePercentage = 72, RetailPercentage = 65 },
+        new LayoutData{ Period = "Jul", OnlinePercentage = 43, RetailPercentage = 79 },
+        new LayoutData{ Period = "Aug", OnlinePercentage = 46, RetailPercentage = 38 },
+        new LayoutData{ Period = "Sep", OnlinePercentage = 55, RetailPercentage = 68 },
+        new LayoutData{ Period = "Oct", OnlinePercentage = 63, RetailPercentage = 34 },
+        new LayoutData{ Period = "Nov", OnlinePercentage = 57, RetailPercentage = 64 },
+        new LayoutData{ Period = "Dec", OnlinePercentage = 80, RetailPercentage = 68 }
+    }
 }
+
 
 <ejs-chart id="chart"></ejs-chart>
