--- a/ChartControls/Pages/Index.cshtml
+++ b/ChartControls/Pages/Index.cshtml
@@ -24,11 +24,13 @@
     <e-chart-primaryxaxis valueType=Category></e-chart-primaryxaxis>
     <e-series-collection>
         <e-series typeof="Line" dataSource="SalesData"
-        xName="Period"
-        yName="OnLinePercentage"></e-series>
+                  xName="Period"
+                  yName="OnlinePercentage">
+        </e-series>
         <e-series typeof="Line" dataSource="SalesData"
-        xName="Period"
-        yName="OnLinePercentage"></e-series>
+                  xName="Period"
+                  yName="RetailPercentage">
+        </e-series>
     </e-series-collection>
 </ejs-chart>
 
