--- a/ChartControls/Pages/CoreChart.cshtml
+++ b/ChartControls/Pages/CoreChart.cshtml
@@ -1,4 +1,14 @@
 ﻿@page
-@model ChartControls.Pages.CoreChartModel
+@model IndexModel
 @{
 }
+<ejs-chart id="chart" title="Sales - Yearly Performance">
+    <e-chart-primaryxaxis valueType=Category></e-chart-primaryxaxis>
+    <e-chart-primaryyaxis title="Sales"></e-chart-primaryyaxis>
+    <e-series-collection>
+        <e-series type="Column"
+                  dataSource="@Model.SalesData"
+                  xName="Period"
+                  yName="OnlineSale"></e-series>
+    </e-series-collection>
+</ejs-chart>
