--- a/ChartControls/Pages/PieChart.cshtml
+++ b/ChartControls/Pages/PieChart.cshtml
@@ -19,3 +19,13 @@
     </e-accumulation-series-collection>
 </ejs-accumulationchart>
 
+<form method="get" action="/CoreChart">
+    <button type="submit" class="btn btn-success">Chuyển sang CoreChart</button>
+</form>
+<br />
+
+<form method="get" action="/LineChart">
+    <button type="submit" class="btn btn-success">Chuyển sang LineChart</button>
+</form>
+
+
