--- a/ChartControls/Pages/LineChart.cshtml
+++ b/ChartControls/Pages/LineChart.cshtml
@@ -31,3 +31,22 @@
         </e-series>
     </e-series-collection>
 </ejs-chart>
+
+
+<style>
+    .center-buttons {
+        display: flex;
+        justify-content: center;
+        gap: 20px;
+    }
+</style>
+
+<div class="center-buttons">
+    <form method="get" action="/PieChart">
+        <button type="submit" class="btn btn-success">Chuyển sang PieChart</button>
+    </form>
+
+    <form method="get" action="/CoreChart">
+        <button type="submit" class="btn btn-success">Chuyển sang CoreChart</button>
+    </form>
+</div>
