--- a/ChartControls/Pages/CoreChart.cshtml
+++ b/ChartControls/Pages/CoreChart.cshtml
@@ -46,4 +46,7 @@
     <form method="get" action="/LineChart">
         <button type="submit" class="btn btn-success">Chuyển sang LineChart</button>
     </form>
+    <form method="get" action="/DashBoard">
+        <button type="submit" class="btn btn-success">Bảng doanh thu</button>
+    </form>
 </div>
