--- a/ChartControls/Pages/LineChart.cshtml
+++ b/ChartControls/Pages/LineChart.cshtml
@@ -49,4 +49,8 @@
     <form method="get" action="/CoreChart">
         <button type="submit" class="btn btn-success">Chuyển sang CoreChart</button>
     </form>
+
+    <form method="get" action="/DashBoard">
+        <button type="submit" class="btn btn-success">Bảng doanh thu</button>
+    </form>
 </div>
